k8s-apps/sabnzbd/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sabnzbd
  labels:
    app.kubernetes.io/name: sabnzbd
    app.kubernetes.io/managed-by: argocd
